# libkikaitachi

./: .editorconfig  meson.build
include/: kikaitachi.h
src/: kikaitachi.c
test/: tests.c
